@@ -47,5 +47,12 @@
       directory="resources"
       />
 
+  <browser:page
+      for="*"
+      name="pfg_javascript_variables.js"
+      class=".jsvariables.JSVariables"
+      permission="zope.Public"
+      />
+
     
 </configure>
